--- a/rof-scheduler/src/PetManagement/AddModal/addPet.css
+++ b/rof-scheduler/src/PetManagement/AddModal/addPet.css
@@ -6,3 +6,8 @@
 .modal-header-color{
     background-color: rgba(0,0,0,.03);
 }
+
+.dropdown-invalid{
+    font-size: .875em;
+    color: #dc3545;
+}
